# lbmpy

./: .gitignore  .gitlab-ci.yml  README.md  conftest.py  noxfile.py  pyproject.toml  pytest.ini
doc/: index.rst
doc/notebooks/: 00_tutorial_lbmpy_walberla_overview.ipynb  06_tutorial_modifying_method_smagorinsky.ipynb  08_tutorial_shanchen_twophase.ipynb  09_tutorial_shanchen_twocomponent.ipynb  demo_interpolation_boundary_conditions.ipynb  demo_thermalized_lbm.ipynb
doc/sphinx/: velocityspace.rst
src/lbmpy/: __init__.py  creationfunctions.py  custom_code_nodes.py  enums.py  fieldaccess.py  fluctuatinglb.py  lbstep.py  lookup_tables.py  macroscopic_value_kernels.py  maxwellian_equilibrium.py  moments.py  scenarios.py  stencils.py
src/lbmpy/advanced_streaming/: indexing.py
src/lbmpy/boundaries/: boundaries_in_kernel.py  boundaryconditions.py  boundaryhandling.py
src/lbmpy/methods/: creationfunctions.py
src/lbmpy/methods/cumulantbased/: cumulantbasedmethod.py
src/lbmpy/methods/momentbased/: centralmomentbasedmethod.py  momentbasedmethod.py
src/lbmpy/phasefield/: cahn_hilliard_lbm.py
src/lbmpy/phasefield_allen_cahn/: contact_angle.py
src/lbmpy/sparse/: mapping.py
src/lbmpy/velocityspace/: __init__.py  abstractlbstencil.py  customstencil.py  ghstencils.py  standardstencils.py
tests/: test_boundary_handling.py  test_central_moment.py  test_central_moment_equivalences.py  test_cpu_gpu_equivalence.py  test_cumulant_equivalences.py  test_diffusion.py  test_float_kernel.py  test_fluctuating_lb.py  test_gpu_block_size_limiting.py  test_lees_edwards.py  test_momentbased_equivalences.py  test_oldroydb.py  test_shifted_transforms.py  test_sparse_lbm.ipynb  test_split_optimization.py  test_stencils.py  test_vectorization.py  test_weights.py  test_zero_centering.py
tests/advanced_setups/: Lees_Edwards_boundary_conditions.ipynb
tests/advanced_streaming/: test_advanced_streaming_noslip.py  test_communication.py
tests/benchmark/: test_benchmark.py
tests/cumulantmethod/: test_flow_around_sphere.py
tests/full_scenarios/schaefer_turek/: scenario_schaefer_turek.py
tests/phasefield_allen_cahn/: test_contact_angle.py
tests/shan_chen/: test_shan_chen_two_component.py  test_shan_chen_two_phase.py
